# firedantic-extras

./: .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: start_emulator.sh
src/firedantic_extras/: __init__.py  cursor_pagination.py  helpers.py  query.py  update_collection.py
src/firedantic_extras/bigquery/: __init__.py  schema.py
src/firedantic_extras/fastapi/: __init__.py  pagination.py
tests/: __init__.py  conftest.py  test_bigquery_schema.py  test_integration_pagination.py  test_integration_sync.py  test_query.py  test_update_collection.py
